2005-06-10  Mark D. Baushke  <mdb@cvshome.org>

	* HACKING: Add a few more guidelines.  Adjust examples for switch
	labels.  Fix some spelling mistakes.
	* cvs-format.el (c-label-offset, case-label): Adjust indentation
	to agree with changes in the HACKING document.
	
2005-06-03  Derek Price  <derek@ximbiot.com>

	* HACKING: Remove `!= NULL' in example conditional.

2005-06-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new server compression limit config options.  Correct
	HistorySearchPath name.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note server compression hang fix.

2005-06-01  Derek Price  <derek@ximbiot.com>

	* TODO (214): Remove completed item.

2005-06-01  Conrad T. Pino  <Conrad@Pino.com>

	* makewin32.cmd: Add options to support CLEAN build target.

2005-06-01  Conrad T. Pino  <Conrad@Pino.com>

	* makewin32.cmd: Add Windows NT command file to build CVS Project.

2005-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerate after build for #include changes.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add files "lib/quotearg.h", "lib/stat-macros.h",
	  "windows-NT/woe32.h" and "windows-NT/unistd.c" to project.
	* cvsnt.dep, cvsnt.mak: Regenerate for "cvsnt.dsp" changes.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* NEWS: Note diff space split fix.
	* BUGS: Remove diff space split note.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add quotearg module.

2005-05-26  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add stat-macros module.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add getlogin_r module.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add lib/canonicalize.h and lib/glob.h to project.
	* cvsnt.dep: Regenerate for cvsnt.dsp changes.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add GNULIB canonicalize module.

2005-05-23  Derek Price  <derek@ximbiot.com>
